<?xml version="1.0"?>
<package>
  <name>orb_slam</name>
  <version>1.0.0</version>
  <description>A real-time SLAM library for monocular, stereo, and RGB-D cameras that computes the camera trajectory and a sparse 3D reconstruction</description>

  <maintainer email="jperron@sfu.ca">Jacob Perron</maintainer>

  <license>GPLv3</license>

  <url type="website">http://webdiis.unizar.es/~raulmur/orbslam</url>

  <author email="raulmur@unizar.es">Raúl Mur Artal</author>

  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>OpenCV</build_depend>
  <build_depend>Eigen3</build_depend>
  <build_depend>Pangolin</build_depend>

  <run_depend>OpenCV</run_depend>
  <run_depend>Eigen3</run_depend>
  <run_depend>Pangolin</run_depend>
  <run_depend>catkin</run_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
